--- a/gemspec.yml
+++ b/gemspec.yml
@@ -1,16 +1,23 @@
 name: ronin-bruteforcers
-summary: A Ronin library.
-description: ronin-bruteforcers is a library for Ronin.
+summary: A Ruby library for Ronin that provides various bruteforcers.
+description:
+  Ronin Bruteforcers is a Ruby library for Ronin that provides various
+  bruteforcers.
 
 license: GPL-3
 authors: Hal Brodigan
 email: postmodern.mod3@gmail.com
-homepage: http://ronin-ruby.github.com/
+homepage: https://github.com/ronin-ruby/ronin-bruteforcers#readme
 has_yard: true
 
 dependencies:
+  # Ronin::Bruteforcers::SSH dependencies
+  net-ssh: ~> 2.1
+  # Ronin dependencies:
+  ronin-support: ~> 0.5
   ronin: ~> 1.0
 
 development_dependencies:
   bundler: ~> 1.0
   yard: ~> 0.8
+  yard-parameters: ~> 0.1
